serviceDotnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-pipe-service
spec:
  selector:
    app: dotnet-pipe
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 5000
  type: NodePort
