serviceHello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
