serviceJava.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-one-pipe-service
spec:
  selector:
    app: the-one-pipe  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
