ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipe-services-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: demo.example
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 8080
      - path: /dotnet
        pathType: Prefix
        backend:
          service:
            name: dotnet-pipe-service
            port:
              number: 8080
      - path: /java
        pathType: Prefix
        backend:
          service:
            name: the-one-pipe-service
            port:
              number: 8080
